<resources>
    <string name="app_name">Who Wants to be Ethical</string>
    <string name="title_welcome">Rerangka Pengambilan Keputusan Etis</string>
    <string name="cont">Continue</string>

    <string name="welcome_1">Dalam proses pengambilan keputusan, sering kali kita dihadapkan pada dilema etis yaitu masalah pengambilan keputusan diantara dua kemungkinan tuntutan moral. Dilema etis muncul karena tidak adanya pilihan yang seluruhnya benar.</string>
    <string name="welcome_2">Misalnya seseorang dihadapkan pada dilema etis: melakukan kecurangan pelaporan keuangan sesuai keinginan pimpinan perusahaan atau kehilangan pekerjaan karena menolak kemauan pimpinan.</string>
    <string name="welcome_3">Aplikasi ini bertujuan untuk memberikan panduan dalam pengambilan keputusan etis berdasarkan teori/pendekatan etika.</string>
    <string name="welcome_4">Ketika Anda dihadapkan dilema etis,Gunakan Teori/pendekatan etika  untuk memberikan panduan dalam pengambilan keputusan etis</string>
    <string name="next">Lanjut</string>
    <string name="prev">Kembali</string>
    <string name="soal1">1. Apakah  masalah yang Anda hadapi? (1/5)</string>
    <string name="soal2">2. Tindakan apa yang Anda usulkan untuk mengatasi masalah tersebut? (2/5)</string>
    <string name="soal3">3. Siapa saja pihak  yang akan terkena dampak dari keputusan tersebut ? (3/5)</string>
    <string name="soal4">4. Coba buat peringkat pihak yang terkena dampak keputusan berdasarkan urutan seberapa penting mereka harus diprioritaskan. (4/5)</string>
    <string name="title_welcome_dua">Bertindak etis itu hebat dan membawa kebaikan.</string>
    <string name="title_welcome_tiga">Berpikirlah rasional dan gunakan hati nurani.</string>
    <string name="soal_util_1">1. Apakah keputusan yang Anda ambil memberikan banyak manfaat bagi banyak pihak?</string>
    <string name="min_util_1">Merugikan banyak pihak</string>
    <string name="max_util_1">Bermanfaat bagi banyak pihak</string>
    <string name="soal_util_2">2. Apakah manfaat keputusan yang Anda ambil melebihi biaya atau pengorbanannya ?</string>
    <string name="min_util_2">Manfaat lebih kecil dari biaya/pengorbanan</string>
    <string name="max_util_2">Manfaat lebih besar dari biaya</string>
    <string name="util_des">Suatu tindakan merupakan tindakan etis jika konsekuensi tindakan memberikan banyak manfaat bagi banyak pihak .</string>
    <string name="deontologi_des">Kebenaran bergantung pada ketaatan dalam menjalankan tugas. Gunakan standar moral, prinsip dan aturan-aturan sebagai paduan untuk membuat keputusan etis yang terbaik.  Suatu tindakan dinyatakan etis berdasarkan motivasi pembuat keputusan,  meskipun tidak menghasilkan manfaat bagi semua pihak.</string>
    <string name="soal_deon_1">1. Apakah tindakan atau keputusan yang Anda ambil  telah sesuai dengan prinsip umum/ universal (misalnya norma sosial, kode etik)?</string>
    <string name="min_deon_1">Sangat bertentangan</string>
    <string name="max_deon_1">Sangat sesuai</string>
    <string name="soal_deon_2">2. Apakah tindakan atau keputusan yang Anda ambil telah sesuai dengan aturan-aturan yang berlaku (misalnya aturan etika profesi, tata kelola)?</string>
    <string name="right_des_1">Suatu tindakan merupakan tindakan etis jika memenuhi aspek keadilan, baik keadilan prosedural maupun keadilan distributif.   Keadilan prosedural artinya setiap orang  harus diperlakukan sama di depan hukum.</string>
    <string name="right_des_2">Keadilan distributif artinya suatu hal yang setara harus diperlakukan sama, namun hal yang tidak setara harus diperlakukan berbeda sesuai dengan proporsi perbedaannya. Misalnya gaji karyawan lulusan sarjana/S1 lebih tinggi dibanding gaji lulusan sekolah dasar/SD.</string>
    <string name="soal_right_1">Apakah keputusan Anda menghargai hak semua pihak?</string>
    <string name="min_right_1">Sangat tidak menghargai</string>
    <string name="max_right_1">Sangat menghargai</string>
    <string name="soal_right_2">2. Apakah ada pihak  yang terlanggar haknya?</string>
    <string name="min_right_2">Sangat banyak</string>
    <string name="max_right_2">Sangat sedikit</string>
    <string name="soal_right_3">3. Apakah  keputusan yang Anda ambil sesuai dengan prinsip keadilan prosedural bahwa setiap orang harus diperlakukan sama di depan hukum ?</string>
    <string name="min_right_3">Sangat tidak adil</string>
    <string name="max_right_3">Sangat adil</string>
    <string name="soal_right_4">4. Apakah keputusan yang Anda ambil sesuai dengan prinsip keadilan distributif bahwa suatu hal yang setara harus diperlakukan sama, namun hal yang tidak setara harus diperlakukan berbeda sesuai dengan proporsi perbedaannya?</string>
    <string name="virtue_des">Suatu tindakan etis berfokus pada <b>karakter moral</b> pembuat keputusan bukan pada konsekuensi tindakan (utilitarianisme) dan bukan pada motivasi pembuat keputusan (deontologi). Suatu tindakan dinyatakan etis jika merupakan tindakan kebajikan misalnya kejujuran, integritas, tanggung jawab.</string>
    <string name="soal_virtue_1">1. Apakah tindakan yang Anda ambil merupakan tindakan kebajikan?</string>
    <string name="min_virtue_1">Tidak ada kebajikan</string>
    <string name="max_virtue_1">Lebih banyak kebajikan</string>
    <string name="soal_virtue_2">2. Apakah tindakan yang Anda ambil berdasarkan karakter luhur seperti kejujuran, tanggungjawab, integritas?</string>
    <string name="min_virtue_2">Tidak berkarakter</string>
    <string name="max_virtue_2">Sangat berkarakter</string>
    <string name="teonom_des">Suatu keputusan dinyatakan etis jika  keputusan tersebut sesuai dengan aturan agama.</string>
    <string name="soal_teonom_1">1. Apakah keputusan yang Anda ambil sesuai dengan aturan agama?</string>
    <string name="soal_teonom_2">2. Apakah  keputusan yang Anda ambil membawa kebahagiaan akhirat dan duniawi?</string>
    <string name="min_teonom_2">Sangat tidak</string>
    <string name="max_teonom_2">Sangat membawa Kebahagiaan Dunia Akhirat</string>
    <string name="ukur_1">Pilih pendekatan yang Anda gunakan dan berilah bobot pada masing-masing pendekatan.</string>
    <string name="ukur_2">Jika Anda mempertimbangkan bahwa semua pendekatan penting, maka Anda dapat memberi bobot yang sama pada masing-masing pendekatan.</string>
    <string name="ukur_3">Jika pada kondisi yang Anda hadapi, keputusan yang terbaik adalah yang membawa manfaat bagi banyak pihak, maka berilah bobot tertinggi pada pendekatan Utilitarianisme.</string>
    <string name="ukur_4">Bobot dari kelima pendekatan tersebut harus berjumlah 100.</string>
    <string name="util">Utilitarianisme atau analisis dampak</string>
    <string name="deontologi">Deontologi atau motivasi untuk perilaku</string>
    <string name="right">Right atau Keadilan</string>
    <string name="virtue">Virtue atau Kebijakan</string>
    <string name="teonom">Teori Teonom</string>
    <string name="lihat">Lihat Hasil</string>
    <string name="evaluasi">Berdasarkan evaluasi pada tindakan atau keputusan yang diambil berdasarkan pendekatan etika. Nilai dari tindakan yang Anda ambil adalah:</string>
    <string name="log">Log</string>
    <string name="eval">Evaluasi Opsi Anda</string>
    <string name="buruk">Tindakan Anda tidak sesuai nilai etika. Buatlah tindakan atau keputusan lain. Ulangi lagi dari langkah ke 2</string>
    <string name="medium">Tindakan Anda dipertanyakan. Tentukan tindakan atau keputusan alternatif. Ulangi lagi dari langkah ke 2.</string>
    <string name="bagus">Berdasarkan pendekatan dan nilai yang Anda gunakan, tindakan Anda kemungkinan besar merupakan tindakan etis.</string>
    <string name="close">Tutup</string>

</resources>
