<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:text="@string/title_welcome"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="0.9"
        android:layout_height="match_parent"
        android:layout_alignStart="@+id/tv_judul"
        android:layout_below="@+id/tv_judul">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_deskripsi1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:text="@string/welcome_1"
                android:fontFamily="serif"/>

            <TextView
                android:id="@+id/tv_deskripsi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:text="@string/welcome_2"
                android:fontFamily="serif"/>

            <ImageView
                android:id="@+id/iv_gbr1"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:id="@+id/tv_deskripsi3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:text="@string/welcome_3"
                android:fontFamily="serif"/>

            <TextView
                android:id="@+id/tv_deskripsi4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:text="@string/welcome_4"
                android:fontFamily="serif"/>

            <ImageView
                android:id="@+id/iv_gbr2"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:text="@string/next" />

</LinearLayout>