<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ukur.UkurActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ukur_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ukur_2" />

            <ImageView
                android:id="@+id/iv_ukur_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ukur_3" />

            <ImageView
                android:id="@+id/iv_ukur_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ukur_4" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_util"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/util"
                    app:layout_constraintBottom_toTopOf="@+id/bobot_deon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/bobot_util" />

                <EditText
                    android:id="@+id/bobot_util"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:text="20"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_deon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/deontologi"
                    app:layout_constraintBottom_toBottomOf="@+id/bobot_deon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/bobot_deon" />

                <EditText
                    android:id="@+id/bobot_deon"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:text="20"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bobot_util" />

                <TextView
                    android:id="@+id/tv_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/right"
                    app:layout_constraintBottom_toTopOf="@+id/bobot_virtue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bobot_deon" />

                <EditText
                    android:id="@+id/bobot_right"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:text="20"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bobot_deon" />

                <TextView
                    android:id="@+id/tv_virtue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/virtue"
                    app:layout_constraintBottom_toTopOf="@+id/bobot_teonom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bobot_right" />

                <EditText
                    android:id="@+id/bobot_virtue"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:text="20"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bobot_right" />

                <TextView
                    android:id="@+id/tv_teonom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/teonom"
                    app:layout_constraintBottom_toBottomOf="@+id/bobot_teonom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bobot_virtue" />

                <EditText
                    android:id="@+id/bobot_teonom"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:text="20"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bobot_virtue" />

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_hitung"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lihat"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>