<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="0.9"
        android:layout_height="match_parent"
        android:layout_alignStart="@+id/tv_judul"
        android:layout_below="@+id/tv_judul">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_deskripsi1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/title_welcome_dua"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_gbr1"
                android:layout_width="match_parent"
                android:layout_height="240dp" />

            <TextView
                android:id="@+id/tv_deskripsi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/title_welcome_tiga"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_gbr2"
                android:layout_width="match_parent"
                android:layout_height="240dp" />

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:text="@string/next" />

</LinearLayout>