<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbare"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evaluasi"
            android:textSize="16sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="0.2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_hasil"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/tv_skor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SKOR"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_evaluasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_log"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginStart="8dp"
                android:text="@string/log"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_evaluasi"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="8dp"
                android:text="@string/eval"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


</LinearLayout>