<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_gbr1"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <TextView
                android:id="@+id/tv_soal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/title_welcome"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_jawaban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_jawaban_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ururtan 1"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_jawaban_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_jawaban_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ururtan 2"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_jawaban_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_jawaban_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ururtan 3"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_jawaban_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_jawaban_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ururtan 4"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_prev"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>


</LinearLayout>